[gd_scene load_steps=4 format=2]

[ext_resource path="res://AnswerButtons.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://LessonButton.tscn" type="PackedScene" id=3]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuestionLabel" type="Label" parent="."]
anchor_right = 1.0
margin_top = 15.0
margin_bottom = 14.0
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnswerButtons" parent="." instance=ExtResource( 1 )]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -20.0
margin_top = -107.0
margin_right = 20.0
margin_bottom = -15.0

[node name="WordList" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 15.0
margin_top = -35.0
margin_right = 88.0
margin_bottom = -15.0
text = "Word List"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="RichTextLabel" type="RichTextLabel" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -60.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReadyButton" type="Button" parent="Panel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -40.0
margin_top = -35.0
margin_right = 40.0
margin_bottom = -15.0
text = "Done"

[node name="LessonPanel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="LessonPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -34.0
margin_right = 20.0
margin_bottom = 34.0
grow_horizontal = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LessonButton" parent="LessonPanel/VBoxContainer" instance=ExtResource( 3 )]
margin_right = 160.0
text = "Lesson One: Plurals"
lesson_number = 2

[node name="LessonButton2" parent="LessonPanel/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 24.0
margin_right = 160.0
margin_bottom = 44.0
text = "Lesson Two: Dual Form"
lesson_number = 3
[connection signal="correct_answer_given" from="AnswerButtons" to="." method="_on_AnswerButtons_correct_answer_given"]
[connection signal="pressed" from="WordList" to="." method="_on_WordList_pressed"]
[connection signal="pressed" from="Panel/ReadyButton" to="." method="_on_ReadyButton_pressed"]
[connection signal="custom_pressed" from="LessonPanel/VBoxContainer/LessonButton" to="." method="_on_LessonButton_pressed"]
[connection signal="custom_pressed" from="LessonPanel/VBoxContainer/LessonButton2" to="." method="_on_LessonButton_pressed"]
